# monopoly_bank

./: .gitignore  CMakeLists.txt  acceptor.cpp  acceptor.h  asio_common.h  authenticate_command.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  icommand.h  main.cpp  networking.h  ping_command.h  player.cpp  player.h  profile_command.h  server.cpp  server.h  service.cpp  service.h  static_file_server.cpp  static_file_server.h  transfer_command.h  types.h  uuid.h  websocket_handshake.cpp  websocket_handshake.h  websocket_protocol_status.txt
examples/: websocket.html
www/: bank.html  index.html  main.js  main.ts
www/scripts/: main.js
